# snimpy

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README  README.md  README.rst  flake.nix  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  license.rst  usage.rst
examples/: add-vlan.py  disable-port-ingress-filtering.py  enable-lldp.py  get-serial.py  list-interfaces.py  list-routes.py  rename-vlan.py  set-ntp.py  set-syslog-ntp.py  vlan-and-interfaces.py
man/: snimpy.1
snimpy/: __init__.py  __main__.py  basictypes.py  cffi_fix.py  config.py  main.py  manager.py  mib.c  mib.py  smi.py  smi_build.py  snmp.c  snmp.py  version.py
tests/: SNIMPY-INVALID-MIB.mib  SNIMPY-MIB.mib  SNIMPY2-MIB.mib  agent.py  test_basictypes.py  test_conf.py  test_main.py  test_manager.py  test_mib.py  test_snmp.py  testbasictypes.py  testbulk.py  testmib.py  testsnmp.py
